fixed text wrapping on "fighting types"

--- a/src/styles.css
+++ b/src/styles.css
@@ -192,7 +192,7 @@ h6 {
     text-align: left;
 }
 .StatisticsTable th:nth-child(1) {
-    width: 100px;
+    width: 110px;
     text-align: left;
 }
 
